--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -8,7 +8,7 @@
         <a href={{ url_for("classifications") }}>here</a> for
         trying out the service.</p>
     <p style="margin-top:1cm;"> Go
-        <a href={{ url_for("transf") }}>here</a> for
+        <a href={{ url_for("transform") }}>here</a> for
         trying out the transformation service.</p>
     <p style="margin-top:1cm;">For the list of models and images
         available, click
